--- a/.github/workflows/pypi-pipeline.yaml
+++ b/.github/workflows/pypi-pipeline.yaml
@@ -5,15 +5,15 @@ on:
   push:
 
 jobs:
-#  Pre-Commit:
-#    uses: ./.github/workflows/pre-commit.yml
-#
-#  Check-Documentation:
-#    needs: Pre-Commit
-#    uses: ./.github/workflows/check-rst-documentation.yml
+  Pre-Commit:
+    uses: ./.github/workflows/pre-commit.yml
+
+  Check-Documentation:
+    needs: Pre-Commit
+    uses: ./.github/workflows/check-rst-documentation.yml
 
   CI:
-#    needs: Check-Documentation
+    needs: Check-Documentation
     uses: ./.github/workflows/ci.yml
 
   Build-and-Release-to-Pypi:
