--- a/.github/workflows/00-pipeline-pypi.yaml
+++ b/.github/workflows/00-pipeline-pypi.yaml
@@ -12,11 +12,11 @@ jobs:
 #    needs: Pre-Commit
 #    uses: ./.github/workflows/02-check-rst-documentation.yml
 
-  CI:
+#  CI:
 #    needs: Check-Documentation
-    uses: ./.github/workflows/03-ci.yml
+#    uses: ./.github/workflows/03-ci.yml
 
   Build-and-Release-to-Pypi:
-    needs: CI
+#    needs: CI
     if: startsWith(github.ref, 'refs/tags/')
     uses: ./.github/workflows/04-build-and-release-to-pypi.yml
