--- a/.github/workflows/03-ci.yml
+++ b/.github/workflows/03-ci.yml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ['3.11']
-#        python-version: ['3.10', '3.11']
-        os: ['ubuntu-latest']
-#        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+#        python-version: ['3.11']
+        python-version: ['3.10', '3.11']
+#        os: ['ubuntu-latest']
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
 #    services:
 #      mysql:
 #        image: mysql:8.0.25
