--- a/.github/workflows/03-ci.yml
+++ b/.github/workflows/03-ci.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$PWD:$PWD/src" >> $GITHUB_ENV
+#      - name: Set PYTHONPATH
+#        run: echo "PYTHONPATH=$PWD:$PWD/src" >> $GITHUB_ENV
 
       - name: Install editable package
         run: pip install -e .[dev]
