--- a/.github/workflows/03-ci.yml
+++ b/.github/workflows/03-ci.yml
@@ -6,35 +6,13 @@ on:
 jobs:
   CI:
     runs-on: ${{matrix.os}}
-#    env:
-#      MYSQL_DATABASE: ${{vars.MYSQL_DATABASE}}
-#      MYSQL_ROOT_PASSWORD: ${{vars.MYSQL_ROOT_PASSWORD}}
-#      MYSQL_HOST:  ${{vars.MYSQL_HOST}}
-#      INSTALLER_USERID: ${{vars.INSTALLER_USERID}}
-#      INSTALLER_PWD: ${{vars.INSTALLER_PWD}}
-#      MYSQL_PWD: ${{vars.MYSQL_PWD}}
-#      MYSQL_TCP_PORT: ${{vars.MYSQL_TCP_PORT}}
     strategy:
       fail-fast: true
       matrix:
-#        python-version: ['3.11']
-        python-version: ['3.10', '3.11']
-#        os: ['ubuntu-latest']
-        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
-#    services:
-#      mysql:
-#        image: mysql:8.0.25
-#        ports:
-#          - ${{vars.MYSQL_TCP_PORT}}:3306
-#        options: >-
-#          --health-cmd="mysqladmin ping"
-#          --health-cmd="mysqladmin ping -h localhost -u root -p${{ vars.MYSQL_ROOT_PASSWORD }}"
-#          --health-interval=10s
-#          --health-timeout=5s
-#          --health-retries=5
-#        env:
-#          MYSQL_ROOT_PASSWORD: ${{vars.MYSQL_ROOT_PASSWORD}}
-#          MYSQL_DATABASE: ${{vars.MYSQL_DATABASE}}
+        python-version: ['3.11']
+#        python-version: ['3.10', '3.11']
+        os: ['ubuntu-latest']
+#        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
 
     steps:
       - name: Check out code
@@ -45,9 +23,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-
-#      - name: Verify DB exists
-#        run: mysql --host ${{env.MYSQL_HOST}} -uroot -p${{env.MYSQL_ROOT_PASSWORD}} -e "SHOW DATABASES"
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
