--- a/.github/workflows/04-build-and-release-to-pypi.yml
+++ b/.github/workflows/04-build-and-release-to-pypi.yml
@@ -11,7 +11,7 @@ jobs:
 
     environment:
       name: pypi
-      url: https://pypi.org/p/FastAPIExample
+      url: https://pypi.org/p/DateId
 
     permissions:
       id-token: write
