--- a/.github/workflows/00-pipeline-pypi.yaml
+++ b/.github/workflows/00-pipeline-pypi.yaml
@@ -20,3 +20,4 @@ jobs:
     needs: CI
     if: startsWith(github.ref, 'refs/tags/')
     uses: ./.github/workflows/04-build-and-release-to-pypi.yml
+    secrets: inherit
