--- a/.github/workflows/04-build-and-release-to-pypi.yml
+++ b/.github/workflows/04-build-and-release-to-pypi.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           git push origin master
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT_HDT }}
+          GH_TOKEN: ${{ secrets.GH_REPO_ACCESS_BY_OWN_APPS }}
 
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
